# picoInstaller

./: .gitignore  README.md  pyproject.toml  requirements.txt
picoInstaller/: config.py  controller.py  main_window.ui  model.py  view.py
